Changed test files location, adjusted tests, no runtime changes