@@ -11,12 +11,8 @@ import com.romanpulov.violetnotecore.Processor.PinsDataReader;
 import com.romanpulov.violetnotecore.Processor.PinsDataWriter;
 import com.romanpulov.violetnotecore.Processor.XMLPassDataReader;
 import com.romanpulov.violetnotecore.Processor.XMLPassDataWriter;
-import org.junit.jupiter.api.MethodOrderer;
-import org.junit.jupiter.api.Order;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 
-import javax.crypto.CipherInputStream;
-import javax.crypto.CipherOutputStream;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.transform.Transformer;
@@ -24,31 +20,33 @@ import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
 
-import org.junit.jupiter.api.TestMethodOrder;
 import org.w3c.dom.*;
 
 import java.io.*;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class TestModelProcessor {
+    private final static Logger logger = Logger.getLogger(TestModelProcessor.class.getName());
 
-    private static final String TEST_CSV_LF_FILE_NAME = "data\\pins_example.csv";
-    private static final String TEST_CSV_LF_OUR_FILE_NAME = "data\\pins_example_out.csv";
-    private static final String TEST_CSV_FILE_NAME = "data\\pins_example_nolf.csv";
-    private static final String TEST_CSV_OUT_FILE_NAME = "data\\pins_example_nolf_out.csv";
-    private static final String TEST_OUT_XML_FILE_NAME = "data\\out_xml_test.xml";
-    private static final String TEST_OUT_VNF_FILE_NAME = "data\\out_vnf_test.xml";
+    private static final String TEST_CSV_LF_FILE_NAME = TestConfiguration.resolveTestFileName("pins_example.csv");
+    private static final String TEST_CSV_LF_OUR_FILE_NAME = TestConfiguration.resolveTestFileName("pins_example_out.csv");
+    private static final String TEST_CSV_FILE_NAME = TestConfiguration.resolveTestFileName("pins_example_nolf.csv");
+    private static final String TEST_OUT_XML_FILE_NAME = TestConfiguration.resolveTestFileName("out_xml_test.xml");
+    private static final String TEST_OUT_VNF_FILE_NAME = TestConfiguration.resolveTestFileName("out_vnf_test.xml");
     private static final String TEST_PASSWORD = "Pass1";
 
-    @Test
-    public void method1() {
-        assertEquals(1, 1);
+    @AfterAll
+    public static void afterAll() {
+        TestUtils.deleteFileIfExists(TEST_OUT_XML_FILE_NAME);
+        TestUtils.deleteFileIfExists(TEST_OUT_VNF_FILE_NAME);
     }
 
+    @Test
+    @Disabled
     public void pinsLoadTest() throws Exception {
         PinsDataReader pinsReader = new PinsDataReader();
         try {
@@ -66,7 +64,7 @@ public class TestModelProcessor {
 
         } catch (DataReadWriteException e) {
             fail("DataReadWriteException:" + e.getMessage());
-            e.printStackTrace();
+            logger.log(Level.WARNING, "DataReadWriteException:" + e.getMessage(), e);
         }
     }
 
@@ -74,17 +72,25 @@ public class TestModelProcessor {
     @Order(1)
     public void pinsSaveTest() throws Exception {
         PinsDataReader pinsReader = new PinsDataReader();
-        PassData pd = pinsReader.readStream(new FileInputStream(TEST_CSV_LF_FILE_NAME));
-        PinsDataWriter pinsWriter = new PinsDataWriter();
-        pinsWriter.writeStream(new FileOutputStream(TEST_CSV_LF_OUR_FILE_NAME), pd);
 
-        PassData pd1 = (new PinsDataReader()).readStream(new FileInputStream(TEST_CSV_LF_OUR_FILE_NAME));
+        try (
+                FileInputStream fileInputStream = new FileInputStream(TEST_CSV_LF_FILE_NAME);
+                FileOutputStream fileOutputStream = new FileOutputStream(TEST_CSV_LF_OUR_FILE_NAME)
+                ) {
+            PassData pd = pinsReader.readStream(fileInputStream);
+            PinsDataWriter pinsWriter = new PinsDataWriter();
+            pinsWriter.writeStream(fileOutputStream, pd);
 
-        //compare
-        assertTrue(pd.getPassNoteList().containsAll(pd1.getPassNoteList()));
-        assertTrue(pd1.getPassNoteList().containsAll(pd.getPassNoteList()));
+            PassData pd1 = (new PinsDataReader()).readStream(new FileInputStream(TEST_CSV_LF_OUR_FILE_NAME));
+
+            //compare
+            assertTrue(pd.getPassNoteList().containsAll(pd1.getPassNoteList()));
+            assertTrue(pd1.getPassNoteList().containsAll(pd.getPassNoteList()));
+        }
     }
 
+    @Test
+    @Disabled
     public void xmlCreateTest() throws Exception {
         DocumentBuilderFactory factory =
                 DocumentBuilderFactory.newInstance();
@@ -126,16 +132,12 @@ public class TestModelProcessor {
         categoryElement3.appendChild(nodeElement3);
 
         // write the content into xml file
-        File f = new File(TEST_OUT_XML_FILE_NAME);
-        if (f.exists())
-            f.delete();
-
-
+        TestUtils.deleteFileIfExists(TEST_OUT_XML_FILE_NAME);
 
         TransformerFactory transformerFactory = TransformerFactory.newInstance();
         Transformer transformer = transformerFactory.newTransformer();
         DOMSource source = new DOMSource(doc);
-        StreamResult resultFile = new StreamResult(f);
+        StreamResult resultFile = new StreamResult(new File(TEST_OUT_XML_FILE_NAME));
 
         // Output to console for testing
         StreamResult resultConsole = new StreamResult(System.out);
@@ -154,24 +156,24 @@ public class TestModelProcessor {
             pd = pinsReader.readStream(new FileInputStream(TEST_CSV_FILE_NAME));
         } catch (DataReadWriteException e) {
             fail("PinsDataReader DataReadWriteException:" + e.getMessage());
-            e.printStackTrace();
+            logger.log(Level.WARNING, "PinsDataReader DataReadWriteException:" + e.getMessage(), e);
         }
         //write PassData
 
         // write the content into xml file
-        File f = new File(TEST_OUT_XML_FILE_NAME);
-        if (f.exists())
-            f.delete();
+        TestUtils.deleteFileIfExists(TEST_OUT_XML_FILE_NAME);
 
-        OutputStream stream = new BufferedOutputStream(new FileOutputStream(f));
-        StreamResult resultFile = new StreamResult(stream);
-
-        XMLPassDataWriter writer = new XMLPassDataWriter(pd);
-        try {
-            writer.writeStream(new FileOutputStream(TEST_OUT_XML_FILE_NAME));
-        } catch (DataReadWriteException e) {
-            fail("XMLPassDataWriter DataReadWriteException:" + e.getMessage());
-            e.printStackTrace();
+        try (
+                FileOutputStream fileOutputStream = new FileOutputStream(TEST_OUT_XML_FILE_NAME);
+                OutputStream stream = new BufferedOutputStream(fileOutputStream)
+                ) {
+            XMLPassDataWriter writer = new XMLPassDataWriter(pd);
+            try {
+                writer.writeStream(stream);
+            } catch (DataReadWriteException e) {
+                fail("XMLPassDataWriter DataReadWriteException:" + e.getMessage());
+                logger.log(Level.WARNING, "XMLPassDataWriter DataReadWriteException:" + e.getMessage(), e);
+            }
         }
     }
 
@@ -192,6 +194,8 @@ public class TestModelProcessor {
         }
     }
 
+    @Test
+    @Disabled
     public void xmlReadTest() throws Exception {
         DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
         DocumentBuilder db = dbf.newDocumentBuilder();
@@ -202,7 +206,9 @@ public class TestModelProcessor {
         }
     }
 
-    public void xmlPassDataReaderTest() throws  Exception{
+    @Test
+    @Disabled
+    public void xmlPassDataReaderTest() throws Exception{
         XMLPassDataReader reader = new XMLPassDataReader();
         PassData passData= reader.readStream(new FileInputStream(TEST_OUT_XML_FILE_NAME));
         System.out.println("Categories:" + passData.getPassCategoryList().size() + ", notes:" + passData.getPassNoteList().size());
@@ -214,19 +220,19 @@ public class TestModelProcessor {
         // category without parent
         PassCategory c1 = new PassCategory("cat1");
         PassCategory c2 = new PassCategory("cat1");
-        List<PassCategory> list1 = Arrays.asList(c1);
-        List<PassCategory> list2 = Arrays.asList(c2);
+        List<PassCategory> list1 = List.of(c1);
+        List<PassCategory> list2 = List.of(c2);
         assertEquals(c1, c2);
         assertTrue(list1.containsAll(list2));
         //category with parent
         PassCategory p1 = new PassCategory("parentcat1");
         PassCategory p2 = new PassCategory("parentcat2");
         c1.setParentCategory(p1);
-        assertFalse(c1.equals(c2));
+        assertNotEquals(c1, c2);
         c2.setParentCategory(p1);
-        assertTrue(c1.equals(c2));
+        assertEquals(c1, c2);
         c2.setParentCategory(p2);
-        assertFalse(c1.equals(c2));
+        assertNotEquals(c1, c2);
     }
 
     @Test
@@ -242,7 +248,7 @@ public class TestModelProcessor {
             pd =  new PinsDataReader().readStream(new FileInputStream(TEST_CSV_FILE_NAME));
         } catch (DataReadWriteException e) {
             fail("PinsDataReader DataReadWriteException:" + e.getMessage());
-            e.printStackTrace();
+            logger.log(Level.WARNING, "PinsDataReader DataReadWriteException:" + e.getMessage(), e);
         }
         return pd;
     }
@@ -255,11 +261,13 @@ public class TestModelProcessor {
 
         //write to test output file
         XMLPassDataWriter writer = new XMLPassDataWriter(pd);
-        try {
-            writer.writeStream(new FileOutputStream(TEST_OUT_XML_FILE_NAME));
+        try (
+                FileOutputStream fileOutputStream = new FileOutputStream(TEST_OUT_XML_FILE_NAME)
+                ) {
+            writer.writeStream(fileOutputStream);
         } catch (DataReadWriteException e) {
             fail("XMLPassDataWriter DataReadWriteException:" + e.getMessage());
-            e.printStackTrace();
+            logger.log(Level.WARNING, "XMLPassDataWriter DataReadWriteException:" + e.getMessage(), e);
         }
 
         //read from test output file to another PassData
@@ -279,33 +287,33 @@ public class TestModelProcessor {
         // get something to PassData
         PassData pd = getPINSPassData();
 
-        OutputStream output = (new AESCryptService()).generateCryptOutputStream(new FileOutputStream(TEST_OUT_VNF_FILE_NAME), TEST_PASSWORD);
-
         //write to crypt output file
         XMLPassDataWriter writer = new XMLPassDataWriter(pd);
-        try {
+        try (
+                FileOutputStream fileOutputStream = new FileOutputStream(TEST_OUT_VNF_FILE_NAME);
+                OutputStream output = (new AESCryptService()).generateCryptOutputStream(fileOutputStream, TEST_PASSWORD)
+        ) {
             writer.writeStream(output);
-        } catch (DataReadWriteException e) {
+        }  catch (DataReadWriteException e) {
             fail("XMLPassDataWriter DataReadWriteException:" + e.getMessage());
-            e.printStackTrace();
+            logger.log(Level.WARNING, "XMLPassDataWriter DataReadWriteException:" + e.getMessage(), e);
         }
-        output.flush();
-        output.close();
 
-        //read from crypt output file to another PassData
-        InputStream input = (new AESCryptService()).generateCryptInputStream(new FileInputStream(TEST_OUT_VNF_FILE_NAME), TEST_PASSWORD);
+        try (
+                FileInputStream fileInputStream = new FileInputStream(TEST_OUT_VNF_FILE_NAME);
+                InputStream input = (new AESCryptService()).generateCryptInputStream(fileInputStream, TEST_PASSWORD)
+                ) {
 
-        XMLPassDataReader reader = new XMLPassDataReader();
-        PassData pd1= reader.readStream(input);
+            //read from crypt output file to another PassData
+            XMLPassDataReader reader = new XMLPassDataReader();
+            PassData pd1= reader.readStream(input);
 
-        input.close();
-
-        //compare
-        assertTrue(pd.getPassCategoryList().containsAll(pd1.getPassCategoryList()));
-        assertTrue(pd1.getPassCategoryList().containsAll(pd.getPassCategoryList()));
-        assertTrue(pd.getPassNoteList().containsAll(pd1.getPassNoteList()));
-        assertTrue(pd1.getPassNoteList().containsAll(pd.getPassNoteList()));
-
+            //compare
+            assertTrue(pd.getPassCategoryList().containsAll(pd1.getPassCategoryList()));
+            assertTrue(pd1.getPassCategoryList().containsAll(pd.getPassCategoryList()));
+            assertTrue(pd.getPassNoteList().containsAll(pd1.getPassNoteList()));
+            assertTrue(pd1.getPassNoteList().containsAll(pd.getPassNoteList()));
+        }
     }
 
     @Test
@@ -316,25 +324,24 @@ public class TestModelProcessor {
         for (String s: a1.keySet()) {
             switch (i++) {
                 case 1:
-                    assertEquals(s, PassNote.ATTR_SYSTEM);
+                    assertEquals(PassNote.ATTR_SYSTEM, s);
                     break;
                 case 2:
-                    assertEquals(s, PassNote.ATTR_USER);
+                    assertEquals(PassNote.ATTR_USER, s);
                     break;
                 case 3:
-                    assertEquals(s, PassNote.ATTR_PASSWORD);
+                    assertEquals(PassNote.ATTR_PASSWORD, s);
                     break;
                 case 4:
-                    assertEquals(s, PassNote.ATTR_COMMENTS);
+                    assertEquals(PassNote.ATTR_COMMENTS, s);
                     break;
                 case 5:
-                    assertEquals(s, PassNote.ATTR_CUSTOM);
+                    assertEquals(PassNote.ATTR_CUSTOM, s);
                     break;
                 case 6:
-                    assertEquals(s, PassNote.ATTR_INFO);
+                    assertEquals(PassNote.ATTR_INFO, s);
                     break;
             }
         }
     }
-
 }
